--- a/AQI_Project_Energy/Data Manipulation.ipynb
+++ b/AQI_Project_Energy/Data Manipulation.ipynb
@@ -13,14 +13,14 @@
     "import requests\n",
     "from pprint import pprint\n",
     "from config import api_key\n",
-    "from config import gkey\n",
+    "from config import gkey, lgkey\n",
     "\n",
-    "gmaps.configure(api_key=gkey)"
+    "gmaps.configure(api_key=lgkey)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "[5 rows x 57 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,24 +496,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11367.44"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lat_long_dat_dong = pd.DataFrame(latlong)\n",
     "locations = lat_long_dat_dong[['latitude','longitude']]\n",
-    "amount2016 = solar_df[2016].tolist()"
+    "amount2016 = solar_df[2016].tolist()\n",
+    "solar_df[2016].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc265f65b9b448a1998a7564cbfdc610",
+       "model_id": "b97f1142e662425faa3972d892ca7a7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -529,14 +541,14 @@
     "fig = gmaps.figure()\n",
     "\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=amount2016, \n",
-    "                                 dissipating=False, max_intensity=10,\n",
+    "                                 dissipating=False, max_intensity=11367.44,\n",
     "                                 point_radius=1)\n",
     "heat_layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,13 +557,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c47e5caf7af249f084b6776224a78ab2",
+       "model_id": "8bc580d5ccc6497ba14aceb67770e958",
        "version_major": 2,
        "version_minor": 0
       },
